# breakfast

./: .envrc  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  Makefile  README.md  dev-requirements.in  dev-requirements.txt  optional-requirements.txt  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  todo.md  tox.ini
.github/workflows/: pythonpackage.yml
breakfast/: __init__.py  main.py  modules.py  names.py  occurrence.py  occurrences.py  position.py  rename.py  scope.py  source.py
breakfast/scope_graph/: visualization.py
src/breakfast/: __init__.py  code_generation.py  configuration.py  main.py  modules.py  names.py  position.py  project.py  refactoring.py  rewrites.py  search.py  source.py  types.py  visitor.py
src/breakfast/breakfast_lsp/: __main__.py  lspbreakfast.lua  server.py
src/breakfast/refactoring/: extract.py
src/breakfast/scope_graph/: __init__.py  scope_graph.py  visualization.py
src/breakfast_lsp/: __init__.py  __main__.py  lspbreakfast.lua  server.py
src/vim/doc/: vim-breakfast.txt
src/vim/ftplugin/python/: tags  test_vim_breakfast.py  tox.ini  vim_breakfast.py
tests/: __init__.py  conftest.py  test_attempt_10.py  test_attempt_11.py  test_attempt_12.py  test_attempt_5.py  test_attempt_6.py  test_attempt_7.py  test_attempt_8.py  test_attempt_9.py  test_breakfast_lsp_server.py  test_code_generation.py  test_experiment_a.py  test_extract.py  test_libcst_attempt.py  test_main.py  test_modules.py  test_names.py  test_occurrence.py  test_position.py  test_refactoring.py  test_rename.py  test_scope_graph.py  test_source.py
tests/data/: module1.py  module2.py  slide.py
vim/: README.md
vim/ftplugin/python/: breakfast  test_vim_breakfast.py  vim_breakfast.py  vim_breakfast.vim
vim/ftplugin/python/tests/: test_vim_breakfast.py
