[tool.ruff]
line-length = 120
select = ["E", "F", "I", "C", "W", "UP", "N", "YTT", "S", "B", "A", "DTZ", "RUF"]
ignore = [
    "E501",  # covered by black
    "A003",  # not actually a problem
    ]
unfixable = ["F401"]  # autofixing unused imports is dangerous
target-version = "py310"

[tool.ruff.per-file-ignores]
"*test*" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
breakfast = ["py.typed"]
extras_require = { tests= ["coverage", "pytest"], dev= ["black", "mypy", "ruff"], docs= [] }

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = true

[project]
name = "breakfast"
version = "0.2"
authors = [{name="Eric Casteleijn",email="thisfred@gamil.com"}]
description = "A Python refactoring tool"
readme = "README.md"
requires-python=">=3.10"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.distutils.bdist_wheel]
universal = true
