[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "breakfast"
version = "0.2"
authors = [{name="Eric Casteleijn",email="thisfred@gamil.com"}]
description = "A Python refactoring tool"
readme = "README.md"
requires-python=">=3.11"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest"]
dev = [
    "astpretty",
    "black",
    "mypy",
    "ruff",
    "pre-commit"]
lsp = [
    "lsprotocol",
    "pygls"]

[project.scripts]
breakfast-lsp = "breakfast_lsp.__main__:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "C", "W", "UP", "N", "YTT", "S", "B", "A", "DTZ", "RUF"]
ignore = ["E501"]  # we use ruff formatting, long lines are comments only
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"*test*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
breakfast = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.distutils.bdist_wheel]
universal = true
