[project]
name = "breakfast"
version = "2025.03.20.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Eric Casteleijn",email="thisfred@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "lsprotocol>=2023.0.1",
    "pygls>=1.3.1"
]

[project.scripts]
breakfast-lsp = "breakfast.breakfast_lsp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "C", "W", "UP", "N", "YTT", "S", "B", "A", "DTZ", "RUF", "N"]
ignore = ["A005", "E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"*test*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.uv]
dev-dependencies = [
    "astpretty>=3.0.0",
    "coverage>=7.6.1",
    "lsp-devtools>=0.2.3",
    "mypy>=1.15.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=6.1.1",
    "ruff>=0.6.4",
]
